syntax/tests/parsing/errors/scanner/escapeSequence.js
let x = "\0"

let x = "\oAAA"
